# pragmatic_programmer

./: README.md
effective_CPlusPlus/: CMakeLists.txt
effective_CPlusPlus/common/: common.h
effective_CPlusPlus/data_structure/: main.cc  skiplist.h  skiplist.hpp  skiplist_test.cc
effective_Go/: basic_test.go
